# dashboard.whs31.com

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  WEB_GUI_SUMMARY.md  WEB_INTERFACE.md  build_web.sh  docker-compose.yml  mcr-server.service.example  test_upload.sh
src/: main.rs
src/api/: cpu.rs  crash_reason.rs  mod.rs  os.rs  report.rs  upload_response.rs
src/crash_report/: mod.rs  report.rs
web/: .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  llms.txt  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
web/src/: App.svelte  app.css  main.js  main.ts
web/src/lib/: utils.ts
web/src/lib/api/: Report.ts
